<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/valuesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_values"
        app:layout_constraintLeft_toLeftOf="parent"
        android:minHeight="48dp"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints="@string/enter_the_values" />

    <TextView
        android:id="@+id/conversionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversionText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valuesEditText"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:checkedButton="@id/rupeetoDollar"
        app:layout_constraintTop_toBottomOf="@+id/conversionTextView"
        >

        <RadioButton
            android:id="@+id/rupeetoDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee_to_dollars"/>
        <RadioButton
            android:id="@+id/dollarToRupee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollars_to_rupee"
            />
        <RadioButton
            android:id="@+id/rupeetoEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee_to_euro"/>
        <RadioButton
            android:id="@+id/euroToRupee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro_to_rupee"/>
        <RadioButton
            android:id="@+id/RupeeToYen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee_to_yen"/>
        <RadioButton
            android:id="@+id/YenTORupee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yen_to_rupees"/>
        <RadioButton
            android:id="@+id/dollarsToEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollars_to_euro"/>
        <RadioButton
            android:id="@+id/euroToDOllars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro_to_dollars"/>
    </RadioGroup>
    <TextView
        android:id="@+id/AnswerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintBottom_toTopOf="@+id/convertButton"
        />

    <TextView
        android:id="@+id/convertedCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toRightOf="@+id/AnswerTextView"
        android:text="@string/here_our_converted_currency_will_be_there"
        app:layout_constraintBottom_toTopOf="@+id/convertButton"
        />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>